siso: webui fix table overflow on smaller screens
use `table-layout: fixed` and set fixed widths on all columns except
for the output name.
this allows the output name column to wrap.

also set a reasonable minimum width for the table and force horizontal
scrolling after that.

Bug: 361461051
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/5893132
Commit-Queue: Richard Wang <richardwa@google.com>
Cr-Commit-Position: refs/heads/main@{#68716}
GitOrigin-RevId: 6b70517641390f8f761187e63b67a5344703dbd2

--- a/webui/css/style.css
+++ b/webui/css/style.css
@@ -302,10 +302,6 @@ html, body {
     margin: 16px 0;
 }
 
-.data-table-container {
-    width: 100%;
-}
-
 .page-controls {
     display: flex;
     margin: 8px 0;
@@ -340,12 +336,17 @@ html, body {
     display: none;
 }
 
+.data-table-container {
+    overflow-x: scroll;
+}
 .data-table-container table {
     position: relative;
     border-collapse: collapse;
-    width: max(65rem, 100%);
+    min-width: 1200px;
+    width: 100%;
     line-height: var(--md-sys-typescale-body-small-line-height);
     letter-spacing: 0.01rem;
+    table-layout: fixed;
 }
 
 .data-table-container thead {
@@ -364,6 +365,15 @@ html, body {
     display: block;
     content: ' ';
     z-index: -1;
+}
+.data-table-container thead th.thin-column {
+    width: 60px;
+}
+.data-table-container thead th.timestamp-column {
+    width: 110px;
+}
+.data-table-container thead th.timeline-column {
+    width: 300px;
 }
 .data-table-container thead th {
     font-size: var(--md-sys-typescale-body-medium-size);
@@ -390,6 +400,9 @@ html, body {
 .data-table-container tbody tr {
     border-top: 1px solid var(--md-sys-color-outline-variant);
     border-bottom: 1px solid var(--md-sys-color-outline-variant);
+}
+.data-table-container tbody th {
+    overflow-wrap: break-word;
 }
 
 .data-table-container .subrow {
